--- a/ShooterGame200/ShooterGame200.csproj
+++ b/ShooterGame200/ShooterGame200.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Source\Engine\Globals.cs" />
     <Compile Include="Source\Engine\Input\Keyboard\McKey.cs" />
     <Compile Include="Source\Engine\Input\McKeyboard.cs" />
+    <Compile Include="Source\Engine\Input\McMouseControl.cs" />
     <Compile Include="Source\GamePlay\World.cs" />
     <Compile Include="Source\GamePlay\World\Hero.cs" />
   </ItemGroup>
@@ -65,6 +66,9 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
     <Content Include="Content\2D\Hero.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\2D\Misc\CursorArrow.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
