Umieranie postaci, po wciśnięciu Enter - Restart. Klasa GamePlay.

--- a/ShooterGame200/ShooterGame200.csproj
+++ b/ShooterGame200/ShooterGame200.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Source\Engine\Input\McMouseControl.cs" />
     <Compile Include="Source\Engine\McTimer.cs" />
     <Compile Include="Source\Engine\Output\QuantityDisplayBar.cs" />
+    <Compile Include="Source\GamePlay.cs" />
     <Compile Include="Source\GamePlay\World.cs" />
     <Compile Include="Source\GamePlay\World\Projectile2d.cs" />
     <Compile Include="Source\GamePlay\World\Projectiles\Fireball.cs" />
