Shader HLSL, wygladzenie wszystkich pixeli krawędzi, wyraźniejsze grafiki i postacie.

--- a/ShooterGame200/ShooterGame200.csproj
+++ b/ShooterGame200/ShooterGame200.csproj
@@ -155,6 +155,9 @@
     <Content Include="Content\2D\SpawnPoints\Portal.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Effects\Normal.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Audio\" />
