--- a/ShooterGame200/ShooterGame200.csproj
+++ b/ShooterGame200/ShooterGame200.csproj
@@ -53,11 +53,13 @@
     <Compile Include="Source\Engine\Output\QuantityDisplayBar.cs" />
     <Compile Include="Source\GamePlay.cs" />
     <Compile Include="Source\GamePlay\World.cs" />
+    <Compile Include="Source\GamePlay\World\Buildings\ArrowTower.cs" />
     <Compile Include="Source\GamePlay\World\Buildings\Tower.cs" />
     <Compile Include="Source\GamePlay\World\Player.cs" />
     <Compile Include="Source\GamePlay\World\Players\AIPlayer.cs" />
     <Compile Include="Source\GamePlay\World\Players\User.cs" />
     <Compile Include="Source\GamePlay\World\Projectile2d.cs" />
+    <Compile Include="Source\GamePlay\World\Projectiles\Arrow.cs" />
     <Compile Include="Source\GamePlay\World\Projectiles\Fireball.cs" />
     <Compile Include="Source\GamePlay\World\SpawnPoint.cs" />
     <Compile Include="Source\GamePlay\World\SpawnPoints\MobChoice.cs" />
@@ -160,6 +162,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Effects\Normal.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\2D\Projectiles\Arrow.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\2D\Buildings\ArrowTower.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
