--- a/ShooterGame200/ShooterGame200.csproj
+++ b/ShooterGame200/ShooterGame200.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Source\Engine\McTimer.cs" />
     <Compile Include="Source\Engine\Output\QuantityDisplayBar.cs" />
     <Compile Include="Source\GamePlay.cs" />
+    <Compile Include="Source\GamePlay\MainMenu.cs" />
     <Compile Include="Source\GamePlay\World.cs" />
     <Compile Include="Source\GamePlay\World\Buildings\ArrowTower.cs" />
     <Compile Include="Source\GamePlay\World\Buildings\Tower.cs" />
@@ -175,6 +176,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Effects\Normal.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\2D\UI\Backgrounds\MainMenuBkg.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
