--- a/ShooterGame200/ShooterGame200.csproj
+++ b/ShooterGame200/ShooterGame200.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Source\Engine\Basic2d\Animated2d.cs" />
     <Compile Include="Source\Engine\Basic2d\Animatied2d\FrameAnimation.cs" />
     <Compile Include="Source\Engine\Basic2d\Button2d.cs" />
+    <Compile Include="Source\Engine\DataTypes\Grids\GridLocation.cs" />
+    <Compile Include="Source\Engine\DataTypes\SquareGrid.cs" />
     <Compile Include="Source\Engine\Globals.cs" />
     <Compile Include="Source\Engine\Input\Keyboard\McKey.cs" />
     <Compile Include="Source\Engine\Input\McKeyboard.cs" />
