--- a/ShooterGame200/ShooterGame200.csproj
+++ b/ShooterGame200/ShooterGame200.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Source\Engine\Basic2d\Animated2d.cs" />
     <Compile Include="Source\Engine\Basic2d\Animatied2d\FrameAnimation.cs" />
     <Compile Include="Source\Engine\Basic2d\Button2d.cs" />
+    <Compile Include="Source\Engine\DataTypes\Grids\GridItem.cs" />
     <Compile Include="Source\Engine\DataTypes\Grids\GridLocation.cs" />
     <Compile Include="Source\Engine\DataTypes\SquareGrid.cs" />
     <Compile Include="Source\Engine\Globals.cs" />
@@ -189,6 +190,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\2D\Units\WalkingGirl.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\2D\Grid\Hill.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\2D\Grid\TreeNice.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
